<resources>
    <string name="app_name">Spirometer</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="hello_world">Hello world!</string>

    //activity_bluetooth_device_list
    <string name="title_paired_devices">Select BT device from paired devices:</string>
    <string name="tvConnecting"></string>
    <string name="tvInfoText">If your device isn\'t listed please pair your device in Android settings</string>
    <string name="btnBtSettings">Bluetooth settings</string>


    <string name="tvBtDevName"></string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bluetooth_connect">Bluetooth Connection</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_results">Results</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_share">Share</string>
    <string name="title_activity_test">Test</string>
    // home activity
    <string name="tvConnStatus">Connection status:</string>
    // login activity
    <string name="title_activity_login">Spirometer</string>
    <string name="title_activity_register">Register</string>
    <string name="btnSendMail">send mail</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="tvFirstName">First name</string>
    <string name="tvLastName">Last name</string>
    <string name="tvDoctorEmail">Doctor email</string>
    <string name="emailExample">example@emailprovider.com</string>
    <string name="weightFormat">kg</string>
    <string name="heightFormat">cm</string>
    <string name="ageFormat">years</string>
    <string name="tvEthnicity">Ethnicity</string>
    <string name="btnSaveProfile">Save profile</string>
    <string name="btnDeleteProfile">Delete profile</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnRegister">Register</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="password">Password</string>

    // result activity
    <string name="btnSaveResults">Save results</string>
    <string name="btnRetry">Retry</string>
</resources>
