<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView android:id="@+id/tvTitle_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"

        android:text="@string/title_paired_devices"
        android:visibility="gone"
        android:background="#666"
        android:textColor="#fff"
        android:paddingLeft="5dp"
        />

    <ListView android:id="@+id/lvPaired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stackFromBottom="false"
        android:layout_weight="1"
        />

    <TextView
        android:id="@+id/tvConnecting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvConnecting"/>

    <TextView
        android:id="@+id/tvInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvInfoText"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:padding="5dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bluetooth settings"
        android:id="@+id/btnBtSettings"/>


</LinearLayout>